--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "core-js": "^2.0.0",
     "normalize.css": "^4.0.0",
     "react": "^15.0.0",
-    "react-dom": "^15.0.0"
+    "react-dom": "^15.0.0",
+    "react-html5video": "^2.0.0",
+    "react-router": "^3.0.2",
+    "video.js": "^5.16.0"
   }
 }
